# Fiorentina

./: .gitignore  Makefile  README.md  THEORY.md  pyproject.toml  quality.ps1  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml
candidate_dataset/: README.md  SCHEMA.md
candidate_dataset/data/raw/Premier_League/: 2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json
candidate_dataset/data/raw/Serie_A/: 1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  1010.json  1011.json  1012.json
candidate_dataset/data/raw_update/Premier_League/: 2013.json  2014.json
candidate_dataset/data/raw_update/Serie_A/: 1003.json  1013.json  1014.json
docs/: BRIEF.md  DESIGN.md
src/football_pipeline/: __init__.py  __main__.py  cli.py  config.py  hashing.py  ingest.py  logging_utils.py  metrics.py  models.py  parquet_io.py  queries.py  state.py  validation.py  verify.py  warehouse_db.py
tests/: conftest.py  test_cli.py  test_hashing.py  test_incremental.py  test_metrics_queries.py  test_state.py  test_validation.py  test_verify.py
